--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                         <div class="row">
                             <div class="col-lg-7">
                                 <div class="wlc-title white">
-                                    <h1 class="fadeInDown animated"><span>imagination</span> is more important
+                                    <h1 class="fadeInDown animated"><span>Amandeep</span> is more important
                                     than knowledge</h1>
                                     <p class="fadeInDown animated">Together we the people achieve more than any single person <br>could ever do alone. </p>
                                    
