--- a/index.html
+++ b/index.html
@@ -214,8 +214,7 @@
                     <div class="col-lg-6 offset-lg-1 align-self-center">
                         <div class="heading white">
                             <strong class="filltext">About us</strong>
-                            <h2>Failure is the condiment
-                            That Gives <span>Success</span></h2>
+                            <h2>Defeat the defeat before the defeat defeats yoy</h2>
                             <p>Spend more time focusing on the important aspects of your business. Turn to McCartney HR LLC in Brooklyn, NY for HR solutions. As an advanced virtual HR company, we are offering online HR systems that can be customized depending on your business needs.</p>
                         <a href="#" class="cbtn cbnt1 fadeInDown animated">download cv <i class="fal fa-angle-right"></i></a>
                         </div>
