--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                         <div class="colsm6 col-lg-3 text-center">
                              <div class="circle2 circle" id="circle2">
                               <strong></strong>
-                              <span>UI & UX Design</span>
+                              <span>akshiszzzzz</span>
                             </div>
                         </div>
                         <div class="colsm6 col-lg-3 text-center">
